--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tekstitöötlus programmid</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <h1>Mis on tekstitöötlus programm?</h1>
@@ -15,7 +16,7 @@
     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiyk4ypye76AhVkYPEDHdGnAkgQFnoECAoQAQ&url=https%3A%2F%2Fet.wikipedia.org%2Fwiki%2FTekstit%25C3%25B6%25C3%25B6tlus&usg=AOvVaw2GY4FsChmB0Trh0HN3UTdV" target="_blank">Rohkem infot</a>
     <br>
     <br>
-    <img src="./word.jpg" alt="Microsoft Word" width="500">
+    <img src="./word.jpg" alt="Microsoft Word" width="500" class="imgframe">
     </p>
     <h2>Erinevad tekstitöötlusprogrammid</h2>
     <ul>
@@ -25,11 +26,13 @@
         <li>Microsoft Word</li>
     </ul>
     <table>
+        <thead>
         <tr>
             <th>Programm</th> 
             <th>Hind</th>
             <th>Lihtsalt mingi tore võrdlusaspekt</th>
         </tr>
+        </thead>
         <tr>
             <td>LibreOffice Writer</td>
             <td>Tasuta</td>
@@ -37,7 +40,7 @@
         </tr>
         <tr>
             <td>Microsoft word</td>
-            <td>UT tudengile tasuta</td>
+            <td class="cell-highlight">UT tudengile tasuta</td>
             <td>7/10, piltidega ei saa hakkama</td>
         </tr>
     </table>
